# uintr-ipc-bench

./: CMakeLists.txt  RISCV.cmake
source/: CMakeLists.txt
source/common/: process.c
source/uintrfd/: CMakeLists.txt  uintr.S  uintr.h  uintrfd-bi.c  uintrfd-uni.c
